manifests/globex/overlays/staging/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: globex
  name: globex
spec:
  replicas: 2
  template:
    spec:
      containers:
        - name: globex
          image: aperturesci/globex:1.7.32
