manifests/globex/overlays/staging/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: globex-staging
  annotations:
    annotations.kubernetes.io/ingress.class: nginx-public
    ingress.kubernetes.io/app-root: /
    link.argocd.argoproj.io/external-link: https://globex-staging.cs.sandbox.codefresh.io/


spec:
  ingressClassName: nginx-public
  rules:
    - host: globex-staging.cs.sandbox.codefresh.io
      http:
        paths:
          - path: /
            backend:
              service:
                name: globex
                port:
                  number: 80
            pathType: Prefix
